--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
             <p>&copy; 2025 Albin Suresh. All Rights Reserved.</p>
         </footer>
     </div>
+    <script src="./index.js"></script>
 
     <!-- Font Awesome for Icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
@@ -599,5 +600,6 @@
             });
         });
     </script>
+    
 </body>
 </html>
