--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2 flex justify-center md:justify-end mt-10 md:mt-0 animate-fade-in-right">
-                    <img src="download.jpeg" alt="Albin Suresh Profile Picture" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-primary glow-effect" onerror="this.onerror=null; this.src='https://placehold.co/400x400/00aaff/ffffff?text=Your+Profile';">
+                    <img src="img.png" alt="Albin Suresh Profile Picture" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-primary glow-effect" onerror="this.onerror=null; this.src='https://placehold.co/400x400/00aaff/ffffff?text=Your+Profile';">
                 </div>
             </div>
         </section>
@@ -217,7 +217,7 @@
             <div class="flex flex-col md:flex-row items-center gap-10">
                 <div class="md:w-1/3 flex justify-center md:justify-start">
                     <!-- About image from Unsplash, with blue fallback -->
-                    <img src="download.jpeg" alt="About Albin Suresh" class="rounded-full w-56 h-56 md:w-64 md:h-64 object-cover border-4 border-primary glow-effect" onerror="this.onerror=null; this.src='https://placehold.co/300x300/00aaff/ffffff?text=Albin+Suresh';">
+                    <img src="img.png" alt="About Albin Suresh" class="rounded-full w-56 h-56 md:w-64 md:h-64 object-cover border-4 border-primary glow-effect" onerror="this.onerror=null; this.src='https://placehold.co/300x300/00aaff/ffffff?text=Albin+Suresh';">
                 </div>
                 <div class="md:w-2/3 text-center md:text-left">
                     <h3 class="text-3xl font-semibold mb-4 text-primary">Java Full-Stack Enthusiast!</h3>
